--- a/scripts/figures_tables.Rmd
+++ b/scripts/figures_tables.Rmd
@@ -21,7 +21,7 @@ figdir = '~/GitHub/ids-ne-lakes/figures/'
 ```
 
 
-Read in all data
+#Read in all data
 
 ```{r}
 #load in all high-frequency insitu data for historical data analysis
@@ -42,7 +42,7 @@ lst_all <- read_csv(paste0(datadir, 'colab-output/2021-06-08/sunapee_temp_stats.
                                grepl('LE07', `system:index`) ~ 'LS 7',
                                grepl('LC08', `system:index`) ~ 'LS 8')) %>% 
   filter(month < 11 & month > 5) %>%
-  mutate(month = as.factor(month))
+  rowid_to_column()
 
 lst_all %>% 
   group_by(LSmission) %>% 
@@ -77,16 +77,20 @@ match_details <- match_details %>%
          year = as.factor(format(date, '%Y')),
          doy = as.numeric(format(date, '%j'))) %>% 
   filter(frequency == 'sub-daily') %>% 
-  filter(month < 11 & month > 5) %>%
-  mutate(month = as.factor(month))
+  filter(month < 11 & month > 5) 
 
 #read in the modal information
 modal_analysis <- read.csv(file.path(datadir, 'colab-output/2021-06-08/date_modalanalysis.csv')) %>% 
-  mutate(date = as.Date(date))
+  mutate(date = as.Date(date),
+         month =  as.numeric(format(date, '%m'))) %>% 
+  filter(month < 11 & month > 5)
 
 #read in binned data
 lst_hist <- read.csv(file.path(datadir, 'colab-output/2021-06-08/sunapee_histograms_0p1bin_reformatted.csv')) %>% 
-  mutate(date = as.Date(date))
+  mutate(date = as.Date(date),
+         month =  as.numeric(format(date, '%m'))) %>% 
+  filter(month < 11 & month > 5)
+
 ```
 
 
@@ -160,42 +164,48 @@ insitu %>%
 
 ```
  
-## Filter out freezing temp images; non unimodal; max spread <110% observed; Summary of lst data
+## QAQC flags for freezing temp images; non unimodal; max spread or IQR <110% observed; Summary of lst data according to QAQC flags
 
 ```{r}
-lst_filt_freeze <- lst_all %>% 
-  filter(surface_temp_min > 0) 
+lst_all_val <- lst_all %>% 
+  mutate(freeze_QAQC = case_when(surface_temp_min < 0 ~ 'F', #pass/fail for freezing temps
+                                 TRUE ~ 'P')) %>% 
+  left_join(., modal_analysis) %>% #join with modal analysis
+  mutate(unimodal_QAQC = case_when(unimodal == 'unimodal' ~ 'P',
+                                   TRUE ~ 'F')) %>%  # pass/fail for unimodality
+  mutate(temp_spread = round(surface_temp_max, digits = 1) - round(surface_temp_min, digits = 1)) %>% #calc temp spread; pass/fail for temp spread
+  mutate(spread_QAQC = case_when(temp_spread < max_spread*1.1 ~ 'P',
+                                 TRUE ~ 'F')) %>% 
+  mutate(IQR = round(surface_temp_p75, digits = 1) - round(surface_temp_p25, digits = 1))  %>%  #calc IQR; pass/fail for temp IQR
+  mutate(IQR_QAQC = case_when(IQR < max_IQR*1.1 ~ 'P',
+                              TRUE ~ 'F'))
 
-lst_filt_mod <- lst_filt_freeze %>% 
-  left_join(., modal_analysis) %>% 
-  filter(unimodal == 'unimodal')
-
-lst_filt_maxrange <- lst_filt_mod %>% 
-  mutate(temp_spread = round(surface_temp_max, digits = 1) - round(surface_temp_min, digits = 1)) %>% 
-  filter(temp_spread < max_spread*1.1)
-
-lst_filt_maxIQR <- lst_filt_mod %>% 
-  mutate(IQR = round(surface_temp_p75, digits = 1) - round(surface_temp_p25, digits = 1))  %>% 
-  filter(IQR < IQR*1.1)
+lst_filt_maxrange <- lst_all_val %>% 
+  filter(freeze_QAQC == 'P' & unimodal_QAQC == 'P' & spread_QAQC == 'P')
 
 lst_filt_maxrange %>% 
   group_by(LSmission) %>% 
   summarize(count = length(LSmission))
 
+lst_filt_maxIQR <- lst_all_val %>% 
+  filter(freeze_QAQC == 'P' & unimodal_QAQC == 'P' & IQR_QAQC == 'P')
+
 lst_filt_maxIQR %>% 
   group_by(LSmission) %>% 
   summarize(count = length(LSmission))
 
-ggplot(lst_all, aes(x = pct_lake, y = (surface_temp_max-surface_temp_min))) +
+ggplot(lst_all_val, aes(x = pct_lake, y = (surface_temp_max-surface_temp_min))) +
   geom_point(aes(color = month)) +
   labs(y = 'temp_spread')+
+  geom_abline(intercept = 1.1 * max_spread, slope = 0, lty = 2) +
   final_theme
 ggsave(file.path(figdir, 'tempspread by pct lake by month summary.png'))
 
-ggplot(lst_all, aes(x = pct_lake, y = (surface_temp_p75-surface_temp_p25))) +
+ggplot(lst_all_val, aes(x = pct_lake, y = (surface_temp_p75-surface_temp_p25))) +
   geom_point(aes(color = month)) +
   labs(y = 'temp_IQR')+
-  final_theme
+    geom_abline(intercept = 1.1 * max_IQR, slope = 0, lty = 2) +
+final_theme
 ggsave(file.path(figdir, 'temp IQR by pct lake by month summary.png'))
 
 ggplot(lst_filt_maxrange, aes(x = pct_lake, y = temp_spread)) +
@@ -212,47 +222,51 @@ ggsave(file.path(figdir, 'filtered temp IQR by pct lake by month summary.png'))
 
 ## Summary Data Tables for insitu-skin temp match
 
+# LEFT OFF HERE TO MOVE FORWARD
 ```{r}
-#inner join with unimodal data and 25% of lake
-match_details_filtrange <- match_details %>% 
-  mutate(date = as.Date(date)) %>% 
-  inner_join(., modal_analysis) %>% 
-  inner_join(., lst_filt_maxrange) %>% 
-  filter(unimodal == 'unimodal' & perc_lake > 25)
+#add match details to lst_all_val
+lst_all_val <- full_join(lst_all_val)
 
-match_details_filtIQR <- match_details %>% 
+#inner join with unimodal data and 25% of lake
+match_details_range <- match_details %>% 
   mutate(date = as.Date(date)) %>% 
-  inner_join(., modal_analysis) %>% 
-  inner_join(., lst_filt_maxIQR) %>% 
-  filter(unimodal == 'unimodal' & perc_lake > 25)
+  inner_join(., lst_all_val) %>% 
+  filter(freeze_QAQC == 'P' & unimodal_QAQC == 'P' & spread_QAQC == 'P') %>% 
+  filter(perc_lake > 25)
+
+match_details_IQR <- match_details %>% 
+  mutate(date = as.Date(date)) %>% 
+  inner_join(., lst_all_val) %>% 
+  filter(freeze_QAQC == 'P' & unimodal_QAQC == 'P' & IQR_QAQC == 'P') %>% 
+  filter(perc_lake > 25)
 
 #number of observations where there is a match with LS data
-match_details_filtrange %>% 
+match_details_range %>% 
   summarize(nobs = length(datetime),
             ndays = length(unique(format(datetime, '%Y-%m-%d'))),
             year_start = min(as.numeric(format(datetime, '%Y'))),
             year_end = max(as.numeric(format(datetime, '%Y'))))
 
-length(unique(match_details_filtrange$location))
+length(unique(match_details_range$location))
 
-match_details_filtIQR %>% 
+match_details_IQR %>% 
   summarize(nobs = length(datetime),
             ndays = length(unique(format(datetime, '%Y-%m-%d'))),
             year_start = min(as.numeric(format(datetime, '%Y'))),
             year_end = max(as.numeric(format(datetime, '%Y'))))
 
-length(unique(match_details_filtIQR$location))
+length(unique(match_details_IQR$location))
 
 ```
 
-## Visualizations of *in-situ* temperature and Landsat LST predictions
+# Initial validation - using all data, by range and IQR
 
-pair qaqc skin temp with insitu as validation data
+## pair qaqc skin temp with insitu as validation data
 ```{r}
 lst_filt_mod_select_range <- lst_filt_maxrange %>% 
-  select(date:temp_spread)
+  select(rowid, date:temp_spread)
 lst_filt_mod_select_IQR <- lst_filt_maxIQR %>% 
-  select(date:IQR)
+  select(rowid, date:IQR)
 
 validation_range <- lst_paired %>% 
   mutate(date = as.Date(substrRight(scene, 8), '%Y%m%d')) %>% 
@@ -264,63 +278,55 @@ validation_IQR <- lst_paired %>%
 
 ```
 
-#### predicted v observed by range
+## predicted v observed by max range
 ```{r}
-val_mean_ls <- lm(validation_range$surface_temp_median ~ validation_range$temp_med)
-summary(val_mean_ls)
+val_med_ls <- lm(validation_range$surface_temp_median ~ validation_range$temp_med)
+summary(val_med_ls)
 
-val_mean_dem <-deming::deming(validation_range$surface_temp_median ~ validation_range$temp_med)
-val_mean_dem
+val_med_ls <-deming::deming(validation_range$surface_temp_median ~ validation_range$temp_med)
+val_med_ls
 
 cor(validation_range$surface_temp_median, validation_range$temp_med)
 
 ggplot(validation_range, aes(x = temp_med, y = surface_temp_median)) +
   geom_point() +
-  geom_abline(intercept = val_mean_dem$coefficients[1], slope = val_mean_dem$coefficients[2], color = 'blue') +
-  geom_abline(intercept = val_mean_dem$ci[1,1], slope = val_mean_dem$ci[2,1], color = 'blue', linetype = 2) +
-  geom_abline(intercept = val_mean_dem$ci[1,2], slope = val_mean_dem$ci[2,2], color = 'blue', linetype = 2) +
+  geom_abline(intercept = val_med_ls$coefficients[1], slope = val_med_ls$coefficients[2], color = 'blue') +
+  geom_abline(intercept = val_med_ls$ci[1,1], slope = val_med_ls$ci[2,1], color = 'blue', linetype = 2) +
+  geom_abline(intercept = val_med_ls$ci[1,2], slope = val_med_ls$ci[2,2], color = 'blue', linetype = 2) +
   geom_abline(intercept = 0, slope = 1) +
   coord_cartesian(xlim = c(7,27),
                   ylim = c(7,27)) +
   labs(y = 'satellite-derived median\nskin temperature (deg C)', 
        x = expression(paste(italic('in-situ'), ' median water temp (deg C)'))) +
   final_theme
-ggsave(paste0(figdir, 'deming_reg_median_v24Sept2021.jpg'), height = 5, width = 5, units = 'in')
+ggsave(paste0(figdir, 'deming_range_v27Sept2021.jpg'), height = 5, width = 5, units = 'in')
 
-validation_range$pred_temp = val_mean_dem$coefficients[1] + val_mean_dem$coefficients[2]*validation_range$temp_med
+validation_range$pred_range = val_med_ls$coefficients[1] + val_med_ls$coefficients[2]*validation_range$temp_med
 
 lst_insitu_dem_forresid = mcreg(x = validation_range$temp_med, y = validation_range$surface_temp_median, method.reg = 'Deming')
-validation_range$opt_resid = MCResult.getResiduals(lst_insitu_dem_forresid)$optimized
+validation_range$opt_resid_range = MCResult.getResiduals(lst_insitu_dem_forresid)$optimized
 
 #plot to make sure prediction is correct
-ggplot(validation_range, aes(x = temp_med, y = pred_temp))+
+ggplot(validation_range, aes(x = temp_med, y = pred_range))+
   geom_point(color = 'blue') +
   geom_point(aes(x = temp_med, y = surface_temp_median))
 ```
 
-#### apply calibration of temp to LS-derived data ####
+### apply calibration of temp to LS-derived data
 ```{r}
-lst_filt_maxrange <- lst_filt_maxrange %>% 
-  mutate(calib_range_med_temp_degC = (surface_temp_median-val_mean_dem$coefficients[1])/val_mean_dem$coefficients[2])
+validation_range <- validation_range %>% 
+  mutate(calib_range = (surface_temp_median-val_med_ls$coefficients[1])/val_med_ls$coefficients[2]) %>% 
+  select(rowid, temp_med, pred_range, opt_resid_range, calib_range)
 
-lst_filt_maxrange %>% 
-  select(date, LSmission, temp_spread, pct_lake, surface_temp_count:surface_temp_stdDev, calib_range_med_temp_degC) %>% 
-  write.csv(file.path(datadir, 'LS_passQAQC_v24Sept2021.csv'), row.names = F)
+lst_all_val <- lst_all_val %>% 
+  full_join(., validation_range)
 
-#plot to make sure calibration is correct
-lst_filt_mod_select_range_calib <- lst_filt_maxrange %>% 
-  select(date:temp_spread, calib_range_med_temp_degC)
-
-validation_range_calib <- lst_paired %>% 
-  mutate(date = as.Date(substrRight(scene, 8), '%Y%m%d')) %>% 
-  inner_join(., lst_filt_mod_select_range_calib)
-
-ggplot(validation_range_calib, aes(x = temp_med, y = surface_temp_median)) +
+ggplot(lst_all_val, aes(x = temp_med, y = surface_temp_median)) +
   geom_point() +
-  geom_point(aes(x = temp_med, y = calib_range_med_temp_degC), color = 'red')+
-  geom_abline(intercept = val_mean_dem$coefficients[1], slope = val_mean_dem$coefficients[2], color = 'blue') +
-  geom_abline(intercept = val_mean_dem$ci[1,1], slope = val_mean_dem$ci[2,1], color = 'blue', linetype = 2) +
-  geom_abline(intercept = val_mean_dem$ci[1,2], slope = val_mean_dem$ci[2,2], color = 'blue', linetype = 2) +
+  geom_point(aes(x = temp_med, y = calib_range), color = 'red')+
+  geom_abline(intercept = val_med_ls$coefficients[1], slope = val_med_ls$coefficients[2], color = 'blue') +
+  geom_abline(intercept = val_med_ls$ci[1,1], slope = val_med_ls$ci[2,1], color = 'blue', linetype = 2) +
+  geom_abline(intercept = val_med_ls$ci[1,2], slope = val_med_ls$ci[2,2], color = 'blue', linetype = 2) +
   geom_abline(intercept = 0, slope = 1) +
   coord_cartesian(xlim = c(7,27),
                   ylim = c(7,27)) +
@@ -332,22 +338,21 @@ ggplot(validation_range_calib, aes(x = temp_med, y = surface_temp_median)) +
 ```
   
 
-
-#### predicted v observed by IQR
+## predicted v observed by IQR
 ```{r}
-val_mean_ls <- lm(validation_IQR$surface_temp_median ~ validation_IQR$temp_med)
-summary(val_mean_ls)
+val_med_IQR <- lm(validation_IQR$surface_temp_median ~ validation_IQR$temp_med)
+summary(val_med_IQR)
 
-val_mean_dem <-deming::deming(validation_IQR$surface_temp_median ~ validation_IQR$temp_med)
-val_mean_dem
+val_med_IQR_dem <-deming::deming(validation_IQR$surface_temp_median ~ validation_IQR$temp_med)
+val_med_IQR_dem
 
 cor(validation_IQR$surface_temp_median, validation_IQR$temp_med)
 
 ggplot(validation_IQR, aes(x = temp_med, y = surface_temp_median)) +
   geom_point() +
-  geom_abline(intercept = val_mean_dem$coefficients[1], slope = val_mean_dem$coefficients[2], color = 'blue') +
-  geom_abline(intercept = val_mean_dem$ci[1,1], slope = val_mean_dem$ci[2,1], color = 'blue', linetype = 2) +
-  geom_abline(intercept = val_mean_dem$ci[1,2], slope = val_mean_dem$ci[2,2], color = 'blue', linetype = 2) +
+  geom_abline(intercept = val_med_IQR_dem$coefficients[1], slope = val_med_IQR_dem$coefficients[2], color = 'blue') +
+  geom_abline(intercept = val_med_IQR_dem$ci[1,1], slope = val_med_IQR_dem$ci[2,1], color = 'blue', linetype = 2) +
+  geom_abline(intercept = val_med_IQR_dem$ci[1,2], slope = val_med_IQR_dem$ci[2,2], color = 'blue', linetype = 2) +
   geom_abline(intercept = 0, slope = 1) +
   coord_cartesian(xlim = c(7,27),
                   ylim = c(7,27)) +
@@ -356,41 +361,35 @@ ggplot(validation_IQR, aes(x = temp_med, y = surface_temp_median)) +
   final_theme
 ggsave(paste0(figdir, 'deming_reg_median_IQR_v23Sept2021.jpg'), height = 5, width = 5, units = 'in')
 
-validation_IQR$pred_temp = val_mean_dem$coefficients[1] + val_mean_dem$coefficients[2]*validation_IQR$temp_med
+validation_IQR$pred_IQR = val_med_IQR_dem$coefficients[1] + val_med_IQR_dem$coefficients[2]*validation_IQR$temp_med
 
-lst_insitu_dem_forresid = mcreg(x = validation_IQR$temp_med, y = validation_IQR$surface_temp_median, method.reg = 'Deming')
-validation_IQR$opt_resid = MCResult.getResiduals(lst_insitu_dem_forresid)$optimized
+lst_insitu_IQR_dem_forresid = mcreg(x = validation_IQR$temp_med, y = validation_IQR$surface_temp_median, method.reg = 'Deming')
+validation_IQR$opt_resid_IQR = MCResult.getResiduals(lst_insitu_IQR_dem_forresid)$optimized
 
 #plot to make sure prediction is correct
-ggplot(validation_IQR, aes(x = temp_med, y = pred_temp))+
+ggplot(validation_IQR, aes(x = temp_med, y = pred_IQR))+
   geom_point(color = 'blue') +
   geom_point(aes(x = temp_med, y = surface_temp_median))
 ```
 
 
-#### apply calibration of temp to LS-derived data - IQR ####
+### apply calibration of temp to LS-derived data - IQR
 ```{r}
-lst_filt_maxIQR <- lst_filt_maxIQR %>% 
-  mutate(calib_IQR_med_temp_degC = (surface_temp_median-val_mean_dem$coefficients[1])/val_mean_dem$coefficients[2])
 
-lst_filt_maxIQR %>% 
-  select(date, LSmission, IQR, pct_lake, surface_temp_count:surface_temp_stdDev, calib_IQR_med_temp_degC) %>% 
-  write.csv(file.path(datadir, 'LS_IQR_passQAQC_v24Sept2021.csv'), row.names = F)
+validation_IQR<- validation_IQR %>% 
+  mutate(calib_IQR = (surface_temp_median-val_med_IQR$coefficients[1])/val_med_IQR$coefficients[2])%>% 
+  select(rowid, pred_IQR, opt_resid_IQR, calib_IQR)
+
+lst_all_val <- lst_all_val %>% 
+  full_join(., validation_IQR)
 
 #plot to make sure calibration is correct
-lst_filt_mod_select_IQR_calib <- lst_filt_maxIQR %>% 
-  select(date:IQR, calib_IQR_med_temp_degC)
-
-validation_IQR_calib <- lst_paired %>% 
-  mutate(date = as.Date(substrRight(scene, 8), '%Y%m%d')) %>% 
-  inner_join(., lst_filt_mod_select_IQR_calib)
-
-ggplot(validation_IQR_calib, aes(x = temp_med, y = surface_temp_median)) +
+ggplot(lst_all_val, aes(x = temp_med, y = surface_temp_median)) +
   geom_point() +
-  geom_point(aes(x = temp_med, y = calib_IQR_med_temp_degC), color = 'red')+
-  geom_abline(intercept = val_mean_dem$coefficients[1], slope = val_mean_dem$coefficients[2], color = 'blue') +
-  geom_abline(intercept = val_mean_dem$ci[1,1], slope = val_mean_dem$ci[2,1], color = 'blue', linetype = 2) +
-  geom_abline(intercept = val_mean_dem$ci[1,2], slope = val_mean_dem$ci[2,2], color = 'blue', linetype = 2) +
+  geom_point(aes(x = temp_med, y = calib_IQR), color = 'red')+
+  geom_abline(intercept = val_med_IQR_dem$coefficients[1], slope = val_med_IQR_dem$coefficients[2], color = 'blue') +
+  geom_abline(intercept = val_med_IQR_dem$ci[1,1], slope = val_med_IQR_dem$ci[2,1], color = 'blue', linetype = 2) +
+  geom_abline(intercept = val_med_IQR_dem$ci[1,2], slope = val_med_IQR_dem$ci[2,2], color = 'blue', linetype = 2) +
   geom_abline(intercept = 0, slope = 1) +
   coord_cartesian(xlim = c(7,27),
                   ylim = c(7,27)) +
@@ -398,67 +397,150 @@ ggplot(validation_IQR_calib, aes(x = temp_med, y = surface_temp_median)) +
        x = expression(paste(italic('in-situ'), ' median water temp (deg C)'))) +
   final_theme
 
+```
+
+## look at the two predictions to see how they relate
+```{r}
+ggplot(lst_all_val, aes(x = calib_range, y = calib_IQR)) +
+  geom_point() +
+  geom_abline(intercept =  0, slope = 1) +
+  final_theme
 
 ```
 
+# Validation trials - play with in-situ database
 
-#### predicted v observed 50% cutoff for lake
+## only use primary GLEON buoy data
+
+## only use 2018 data
+
+## only use littoral data (from KLC traps)
+
+## only use 2 years of data (all sources)
+
+## only use 2 years of data (buoy only)
+
+
+
+# Validation trials - play with LS variables
+
+Goal here: what is important to LS variables? How does it change the regression and error calcs?
+
+
+## predicted v observed 50% cutoff for lake - range
 ```{r}
-validtion_50 <- validation_range %>% 
+validtion_50_range <- validation_range %>% 
   filter(perc_lake > 50)
-val_mean_ls_50 <- lm(validtion_50$surface_temp_median ~ validtion_50$temp_med)
-summary(val_mean_ls_50)
+val_med_ls_50_range <- lm(validtion_50_range$surface_temp_median ~ validtion_50_range$temp_med)
+summary(val_med_ls_50_range)
 
-val_mean_dem_50 <-deming::deming(validtion_50$surface_temp_median ~ validtion_50$temp_med)
-val_mean_dem_50
+val_med_dem_50_range <-deming::deming(validtion_50_range$surface_temp_median ~ validtion_50_range$temp_med)
+val_med_dem_50_range
 
-cor(validtion_50$surface_temp_median, validtion_50$temp_med)
+cor(validtion_50_range$surface_temp_median, validtion_50_range$temp_med)
 
-ggplot(validtion_50, aes(x = temp_med, y = surface_temp_median)) +
+ggplot(validtion_50_range, aes(x = temp_med, y = surface_temp_median)) +
   geom_point() +
-  geom_abline(intercept = val_mean_dem_50$coefficients[1], slope = val_mean_dem_50$coefficients[2], color = 'blue') +
-  geom_abline(intercept = val_mean_dem_50$ci[1,1], slope = val_mean_dem_50$ci[2,1], color = 'blue', linetype = 2) +
-  geom_abline(intercept = val_mean_dem_50$ci[1,2], slope = val_mean_dem_50$ci[2,2], color = 'blue', linetype = 2) +
+  geom_abline(intercept = val_med_dem_50_range$coefficients[1], slope = val_med_dem_50_range$coefficients[2], color = 'blue') +
+  geom_abline(intercept = val_med_dem_50_range$ci[1,1], slope = val_med_dem_50_range$ci[2,1], color = 'blue', linetype = 2) +
+  geom_abline(intercept = val_med_dem_50_range$ci[1,2], slope = val_med_dem_50_range$ci[2,2], color = 'blue', linetype = 2) +
   geom_abline(intercept = 0, slope = 1) +
   coord_cartesian(xlim = c(7,27),
                   ylim = c(7,27)) +
   labs(y = 'satellite-derived median\nskin temperature (deg C)', 
        x = expression(paste(italic('in-situ'), ' median water temp (deg C)'))) +
   final_theme
-ggsave(paste0(figdir, 'deming_reg_median_50perc_v28June2021.jpg'), height = 5, width = 5, units = 'in')
+ggsave(paste0(figdir, 'deming_reg_median_50perc_range_v27Sept2021.jpg'), height = 5, width = 5, units = 'in')
 
 
 ```
 
-#### predicted v observed 60% cutoff
+
+## predicted v observed 50% cutoff for lake - IQR
 ```{r}
-validtion_60 <- validation_range %>% 
-  filter(perc_lake > 60)
-val_mean_ls_60 <- lm(validtion_60$surface_temp_median ~ validtion_60$temp_med)
-summary(val_mean_ls_60)
+validtion_50_IQR <- validation_IQR %>% 
+  filter(perc_lake > 50)
+val_med_ls_50_IQR <- lm(validtion_50_IQR$surface_temp_median ~ validtion_50_IQR$temp_med)
+summary(val_med_ls_50_IQR)
 
-val_mean_dem_60 <-deming::deming(validtion_60$surface_temp_median ~ validtion_60$temp_med)
-val_mean_dem_60
+val_med_dem_50_IQR <-deming::deming(validtion_50_IQR$surface_temp_median ~ validtion_50_IQR$temp_med)
+val_med_dem_50_IQR
 
-cor(validtion_60$surface_temp_median, validtion_60$temp_med)
+cor(validtion_50_IQR$surface_temp_median, validtion_50_IQR$temp_med)
 
-ggplot(validtion_60, aes(x = temp_med, y = surface_temp_median)) +
+ggplot(validtion_50_IQR, aes(x = temp_med, y = surface_temp_median)) +
   geom_point() +
-  geom_abline(intercept = val_mean_dem_60$coefficients[1], slope = val_mean_dem_60$coefficients[2], color = 'blue') +
-  geom_abline(intercept = val_mean_dem_60$ci[1,1], slope = val_mean_dem_60$ci[2,1], color = 'blue', linetype = 2) +
-  geom_abline(intercept = val_mean_dem_60$ci[1,2], slope = val_mean_dem_60$ci[2,2], color = 'blue', linetype = 2) +
+  geom_abline(intercept = val_med_dem_50_IQR$coefficients[1], slope = val_med_dem_50_IQR$coefficients[2], color = 'blue') +
+  geom_abline(intercept = val_med_dem_50_IQR$ci[1,1], slope = val_med_dem_50_IQR$ci[2,1], color = 'blue', linetype = 2) +
+  geom_abline(intercept = val_med_dem_50_IQR$ci[1,2], slope = val_med_dem_50_IQR$ci[2,2], color = 'blue', linetype = 2) +
   geom_abline(intercept = 0, slope = 1) +
   coord_cartesian(xlim = c(7,27),
                   ylim = c(7,27)) +
   labs(y = 'satellite-derived median\nskin temperature (deg C)', 
        x = expression(paste(italic('in-situ'), ' median water temp (deg C)'))) +
   final_theme
-ggsave(paste0(figdir, 'deming_reg_median_60perc_v28June2021.jpg'), height = 5, width = 5, units = 'in')
+ggsave(paste0(figdir, 'deming_reg_median_50perc_IQR_v27Sept2021.jpg'), height = 5, width = 5, units = 'in')
 
 
 ```
 
-# by cloud cover 50%
+
+## by cloud cover 50% - range
+
+```{r}
+validtion_50cc_range <- validation_range %>% 
+  filter(cloud_cover < 50)
+val_med_ls_50cc_range <- lm(validtion_50cc_range$surface_temp_median ~ validtion_50cc_range$temp_med)
+summary(val_med_ls_50cc_range)
+
+val_med_dem_50cc_range <-deming::deming(validtion_50cc_range$surface_temp_median ~ validtion_50cc_range$temp_med)
+val_med_dem_50cc_range
+
+cor(validtion_50cc_range$surface_temp_median, validtion_50cc_range$temp_med)
+
+ggplot(validtion_50cc_range, aes(x = temp_med, y = surface_temp_median)) +
+  geom_point() +
+  geom_abline(intercept = val_med_dem_50cc_range$coefficients[1], slope = val_med_dem_50cc_range$coefficients[2], color = 'blue') +
+  geom_abline(intercept = val_med_dem_50cc_range$ci[1,1], slope = val_med_dem_50cc_range$ci[2,1], color = 'blue', linetype = 2) +
+  geom_abline(intercept = val_med_dem_50cc_range$ci[1,2], slope = val_med_dem_50cc_range$ci[2,2], color = 'blue', linetype = 2) +
+  geom_abline(intercept = 0, slope = 1) +
+  coord_cartesian(xlim = c(7,27),
+                  ylim = c(7,27)) +
+  labs(y = 'satellite-derived median\nskin temperature (deg C)', 
+       x = expression(paste(italic('in-situ'), ' median water temp (deg C)'))) +
+  final_theme
+ggsave(paste0(figdir, 'deming_reg_median_50perccc_range_v27Sept2021.jpg'), height = 5, width = 5, units = 'in')
+
+```
+
+## by cloud cover 50% - IQR
+
+```{r}
+validtion_50cc_IQR <- validation_IQR %>% 
+  filter(cloud_cover < 50)
+val_med_ls_50cc_IQR <- lm(validtion_50cc_IQR$surface_temp_median ~ validtion_50cc_IQR$temp_med)
+summary(val_med_ls_50cc_IQR)
+
+val_med_dem_50cc_IQR <-deming::deming(validtion_50cc_IQR$surface_temp_median ~ validtion_50cc_IQR$temp_med)
+val_med_dem_50cc_IQR
+
+cor(validtion_50cc_IQR$surface_temp_median, validtion_50cc_IQR$temp_med)
+
+ggplot(validtion_50cc_IQR, aes(x = temp_med, y = surface_temp_median)) +
+  geom_point() +
+  geom_abline(intercept = val_med_dem_50cc_IQR$coefficients[1], slope = val_med_dem_50cc_IQR$coefficients[2], color = 'blue') +
+  geom_abline(intercept = val_med_dem_50cc_IQR$ci[1,1], slope = val_med_dem_50cc_IQR$ci[2,1], color = 'blue', linetype = 2) +
+  geom_abline(intercept = val_med_dem_50cc_IQR$ci[1,2], slope = val_med_dem_50cc_IQR$ci[2,2], color = 'blue', linetype = 2) +
+  geom_abline(intercept = 0, slope = 1) +
+  coord_cartesian(xlim = c(7,27),
+                  ylim = c(7,27)) +
+  labs(y = 'satellite-derived median\nskin temperature (deg C)', 
+       x = expression(paste(italic('in-situ'), ' median water temp (deg C)'))) +
+  final_theme
+ggsave(paste0(figdir, 'deming_reg_median_50perccc_IQR_v27Sept2021.jpg'), height = 5, width = 5, units = 'in')
+
+```
+
 
 
 
